@@ -1,18 +1,19 @@
 package com.example.benomad.service.impl;
 
+import com.example.benomad.dto.ImageDTO;
+import com.example.benomad.dto.MessageResponse;
 import com.example.benomad.dto.PlaceDTO;
+import com.example.benomad.entity.Comment;
 import com.example.benomad.entity.Place;
 import com.example.benomad.entity.Rating;
-import com.example.benomad.enums.ContentNotFoundEnum;
+import com.example.benomad.enums.Content;
 import com.example.benomad.enums.PlaceType;
 import com.example.benomad.enums.Region;
 import com.example.benomad.exception.ContentIsNotRatedException;
 import com.example.benomad.exception.InvalidRatingException;
 import com.example.benomad.exception.ContentNotFoundException;
-import com.example.benomad.logger.LogWriterServiceImpl;
 import com.example.benomad.entity.User;
 import com.example.benomad.enums.*;
-import com.example.benomad.exception.*;
 import com.example.benomad.mapper.PlaceMapper;
 import com.example.benomad.repository.PlaceRepository;
 import com.example.benomad.repository.RatingRepository;
@@ -21,77 +22,65 @@ import com.example.benomad.service.PlaceService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
 import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class PlaceServiceImpl implements PlaceService {
 
     private final PlaceRepository placeRepository;
     private final RatingRepository ratingRepository;
     private final UserRepository userRepository;
     private final PlaceMapper placeMapper;
+    private final UserServiceImpl userService;
     private final AuthServiceImpl authService;
-    private final LogWriterServiceImpl logWriter;
     private final ImageServiceImpl imageService;
 
     @Override
-    public List<PlaceDTO> getPlacesByAttributes(String name, Region region, PlaceType placeType,
+    public List<PlaceDTO> getMyFavorites() {
+        Long userId = authService.getCurrentUserId();
+        return placeMapper.entityListToDtoList(userService.getUserEntityById(userId).getPlaces());
+    }
+
+    @Override
+    public List<PlaceDTO> getPlacesByAttributes(String name,
                                                    String address,Boolean match,PageRequest pageRequest) {
-        Place builtPlace = Place.builder().name(name).address(address).region(region).placeType(placeType).build();
+        Place builtPlace = Place.builder().name(name).address(address).build();
         Example<Place> exampleOfPlace = Example.of(builtPlace,getExampleMatcher(match));
         Page<Place> pages = placeRepository.findAll(exampleOfPlace,pageRequest);
-        List<PlaceDTO> placeDTOS = placeMapper.entityListToDtoList(pages.stream().collect(Collectors.toList()));
-        logWriter.get(String.format("%s - Returned %d places", authService.getCurrentEmail(), placeDTOS.size()));
-        return placeDTOS;
+        return placeMapper.entityListToDtoList(pages.stream().collect(Collectors.toList()));
     }
 
 
     @Override
     public PlaceDTO getPlaceById(Long placeId) throws ContentNotFoundException {
-        PlaceDTO placeDTO = placeMapper.entityToDto(placeRepository.findById(placeId).orElseThrow(
-                () -> {
-                    throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
-                })
-        );
-        logWriter.get(String.format("%s - Returned place with id = %d", authService.getCurrentEmail(), placeId));
-        return placeDTO;
+        return placeMapper.entityToDto(getPlaceEntityById(placeId));
     }
 
     @Override
-    public PlaceDTO insertPlace(PlaceDTO placeDTO) {
+    public Long insertPlace(PlaceDTO placeDTO) {
         placeDTO.setId(null);
-        placeDTO.setId(placeRepository.save(placeMapper.dtoToEntity(placeDTO)).getId());
-        logWriter.insert(String.format("%s - Inserted place with id = %d", authService.getCurrentEmail(), placeDTO.getId()));
-        return placeDTO;
+        return placeRepository.save(placeMapper.dtoToEntity(placeDTO)).getId();
     }
 
     @Override
     public PlaceDTO deletePlaceById(Long placeId) throws ContentNotFoundException {
-        Place place = placeRepository.findById(placeId).orElseThrow(
-                () -> {
-                    throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
-                }
-        );
+        Place place = getPlaceEntityById(placeId);
         placeRepository.delete(place);
-        logWriter.delete(String.format("%s - Deleted place with id = %d", authService.getCurrentEmail(), placeId));
         return placeMapper.entityToDto(place);
     }
 
     @Override
     public PlaceDTO updatePlaceById(Long placeId, PlaceDTO placeDTO) throws ContentNotFoundException {
-        if(!placeRepository.existsById(placeId)){
-            throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
-        }
+        getPlaceEntityById(placeId);
+        placeDTO.setId(placeId);
         placeRepository.save(placeMapper.dtoToEntity(placeDTO));
-        logWriter.update(String.format("%s - Deleted place with id = %d", authService.getCurrentEmail(), placeId));
         return placeDTO;
     }
 
@@ -113,107 +102,104 @@ public class PlaceServiceImpl implements PlaceService {
             ratingRepository.save(neededRating);
         }catch (Exception e){
             ratingRepository.save(Rating.builder()
-                    .place(placeRepository.findById(placeId).orElseThrow(
-                            () -> {
-                                throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
-                            }
-                    ))
-                    .user(userRepository.findById(userId).orElseThrow(
-                            () -> {
-                                throw new ContentNotFoundException(ContentNotFoundEnum.USER, "id", String.valueOf(userId));
-                            }
-                    ))
+                    .place(getPlaceEntityById(placeId))
+                    .user(userService.getUserEntityById(userId))
                     .rating(rating)
                     .build());
         }
-        logWriter.update(String.format("%s - %s place with id = %d", authService.getCurrentEmail(),
-                isRemoval ? "Removed rated for" : "Rated", placeId));
-        return placeMapper.entityToDto(placeRepository.findById(placeId).orElseThrow(() -> {
-            throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
-        }));
+        return placeMapper.entityToDto(getPlaceEntityById(placeId));
     }
 
     private Rating getRating(Long placeId, Long userId) {
         return ratingRepository.findByPlaceAndUser(
-                placeRepository.findById(placeId).orElseThrow(
-                        () -> {
-                            throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
-                        }),
-                userRepository.findById(userId).orElseThrow(
-                        () -> {
-                            throw new ContentNotFoundException(ContentNotFoundEnum.USER, "id", String.valueOf(userId));
-                        })
+                getPlaceEntityById(placeId),
+                userService.getUserEntityById(userId)
         ).orElseThrow(
                 () -> {
-                    throw new ContentIsNotRatedException(ContentNotFoundEnum.PLACE);
+                    throw new ContentIsNotRatedException(Content.PLACE);
                 });
     }
 
     @Override
-    public List<PlaceDTO> getPlacesByTypesAndCategories(List<PlaceCategory> categories, List<PlaceType> types, Pageable pageable) {
-        List<String> sCategories = categories.stream().map(Enum::name).toList();
-        List<String> sTypes = types.stream().map(Enum::name).toList();
-        Page<Place> placePage = placeRepository.findPlacesByPlaceCategoriesAndPlaceTypes(sCategories,sTypes,pageable);
-        return placeMapper.entityListToDtoList(placePage.stream().toList());
+    public List<PlaceDTO> getPlacesByTypesAndCategories(List<PlaceCategory> categories, List<PlaceType> types,List<Region> regions, Pageable pageable) {
+        List<String> sCategories = categories.stream().map(Enum::name).collect(Collectors.toList());
+        List<String> sTypes = types.stream().map(Enum::name).collect(Collectors.toList());
+        List<String> sRegions = regions.stream().map(Enum::name).collect(Collectors.toList());
+        Page<Place> placePage = placeRepository.findPlacesByPlaceCategoriesAndPlaceTypes(sCategories,sTypes,sRegions,pageable);
+        return placeMapper.entityListToDtoList(placePage.stream().collect(Collectors.toList()));
     }
 
     @Override
-    public Long insertImageByPlaceId(Long id, MultipartFile file) throws ContentNotFoundException {
-        Place place = placeRepository.findById(id)
-                .orElseThrow(() -> new ContentNotFoundException(ContentNotFoundEnum.PLACE,"id",String.valueOf(id)));
-        imageService.checkIsNotEmpty(file);
-        imageService.checkIsImage(file);
-        Map<String, String> metadata = imageService.getMetaData(file);
-        String pathToFile = String.format("%s/%s", AwsBucket.MAIN_BUCKET.getBucketName(),ImagePath.PLACE.getPathToImage());
-        String uniqueFileName = String.format("%s-%s",file.getOriginalFilename(), UUID.randomUUID());
-        try {
-            imageService.saveImageAws(pathToFile,uniqueFileName, Optional.of(metadata),file.getInputStream());
-            place.setImageUrl(uniqueFileName);
+    public MessageResponse insertImagesByPlaceId(Long placeId, MultipartFile[] files) {
+        Place place = getPlaceEntityById(placeId);
+        place.setImageUrls(imageService.uploadImages(files, ImagePath.PLACE));
+        placeRepository.save(place);
+        return new MessageResponse("Images have been successfully added to the place!", 200);
+    }
+
+    @Override
+    public List<String> getImagesById(Long placeId) {
+        Place place = getPlaceEntityById(placeId);
+        return place.getImageUrls();
+    }
+
+    @Override
+    public PlaceDTO insertPlaceWithImages(PlaceDTO placeDTO, MultipartFile[] files) {
+        placeDTO.setId(null);
+        placeDTO.setImageUrls(imageService.uploadImages(files, ImagePath.PLACE));
+        placeDTO.setId(placeRepository.save(placeMapper.dtoToEntity(placeDTO)).getId());
+        return placeDTO;
+    }
+
+    @Override
+    public MessageResponse insertImages64ByPLaceId(Long id, ImageDTO[] files) {
+            Place place = getPlaceEntityById(id);
+            place.setImageUrls(imageService.uploadImages64(files,ImagePath.PLACE));
             placeRepository.save(place);
-            return place.getId();
-        } catch (IOException e) {
-            throw new FailedWhileUploadingException();
-        }
+            return new MessageResponse("Images have been successfully added to the place!", 200);
     }
 
     @Override
-    public byte[] getImageByPlaceId(Long id) {
-        Place place = placeRepository.findById(id)
-                .orElseThrow(() -> new ContentNotFoundException(ContentNotFoundEnum.PLACE,"id",String.valueOf(id)));
-        String pathToFile = String.format("%s/%s", AwsBucket.MAIN_BUCKET.getBucketName(),ImagePath.PLACE.getPathToImage());
-        return place.getImageUrl().map(x -> imageService.getAwsImageByPathAndKey(pathToFile,x)).orElse(new byte[0]);
-    }
-
-    @Override
-    public PlaceDTO addPlaceToFavorites(Long id) throws ContentNotFoundException {
+    public PlaceDTO addPlaceToFavorites(Long placeId) throws ContentNotFoundException {
         Long userId = authService.getCurrentUserId();
-        User user = userRepository.findById(userId)
-                .orElseThrow(
-                        () -> new ContentNotFoundException(ContentNotFoundEnum.USER,"id",String.valueOf(userId))
-                );
-        Place place = placeRepository.findById(id)
-                .orElseThrow(
-                        () -> new ContentNotFoundException(ContentNotFoundEnum.PLACE,"id",String.valueOf(id))
-                );
-        if (user.getPlaces().contains(place)) throw new ContentIsAlreadyInFavoritesException(ContentNotFoundEnum.PLACE);
-        user.getPlaces().add(place);
+        User user = userService.getUserEntityById(userId);
+        Place place = getPlaceEntityById(placeId);
+        if (user.getPlaces().contains(place))  user.getPlaces().remove(place);
+        else user.getPlaces().add(place);
         userRepository.save(user);
         return placeMapper.entityToDto(place);
     }
 
+    @Override
+    public void addComment(Long placeId, Comment comment){
+        Place place = getPlaceEntityById(placeId);
+        Set<Comment> comments = place.getComments();
+        comments.add(comment);
+        place.setComments(comments);
+        placeRepository.save(place);
+    }
+
+    @Override
+    public Place getPlaceEntityById(Long placeId){
+        return placeRepository.findById(placeId)
+                .orElseThrow(
+                        () -> new ContentNotFoundException(Content.PLACE,"id",String.valueOf(placeId))
+                );
+    }
+    
     private ExampleMatcher getExampleMatcher(Boolean match) {
         ExampleMatcher matches = ExampleMatcher.matchingAll()
                 .withMatcher("name", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("region",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("placeType",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("address",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
-                .withIgnorePaths("id","description","imageUrl","linkUrl");
+                .withIgnorePaths("id","description","imageUrl","linkUrl","placeCategory","region","latitude","longitude");
         ExampleMatcher notMatches = ExampleMatcher.matchingAny()
                 .withMatcher("name", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("region",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("placeType",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("address",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
-                .withIgnorePaths("id","description","imageUrl","linkUrl");
+                .withIgnorePaths("id","description","imageUrl","linkUrl","placeCategory","region","latitude","longitude");
         return match ? matches : notMatches;
     }
 }
